Fix word wrap in tweet

--- a/app/assets/stylesheets/tweets.css.scss
+++ b/app/assets/stylesheets/tweets.css.scss
@@ -125,6 +125,7 @@
 
 .tweet-text {
   margin: 10px 0;
+  word-wrap: break-word;
 }
 
 // Tweet show page
